third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/enum/bug-14296.exp
processed 1 task

task 0 'publish'. lines 1-24:
Error: compilation errors:
 error: match not exhaustive
   ┌─ TEMPFILE:16:16
   │
16 │         match (y) {
   │                ^
   │
   = missing `E::V1{..}`


